proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/additional_native_trivial_1.py
# Test syntactically wrong native function.
def wrong_native_fn():
    native
